[package]
name = "duid"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Djedou Arnaud <djedouarnaud.aman@gmail.com>"]
description = "Web framework for creating fast and interactive client side web application"
categories = [ "Webassembly", "Web-programming"]
keywords = [ "gui", "wasm", "elm"]
repository = "https://github.com/djedou/duid/tree/master"
readme = "README.md"
documentation = "https://docs.rs/duid"


[dependencies]
core = {version = "0.1", path = "core", default-features = true }

[features]
default = ["core/default", "with-request-animation-frame"]
with-request-animation-frame = ["core/with-request-animation-frame"]



[workspace]
members = [
    "core",
]

exclude = [
    "examples/counter"
]
