[package]
name = "duid"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Djedou Arnaud <djedouarnaud.aman@gmail.com>"]
description = "Web framework for creating fast and interactive client side web application"
categories = [ "gui", "wasm", "web-programming"]
keywords = [ "gui", "wasm", "elm"]
repository = "https://github.com/djedou/duid/tree/master"
readme = "README.md"
documentation = "https://docs.rs/duid"


[dependencies]
duid-core = {version = "0.1", path = "duid-core", default-features = true }

[features]
default = ["duid-core/default", "with-request-animation-frame"]
with-request-animation-frame = ["duid-core/with-request-animation-frame"]



[workspace]
members = [
    "duid-core",
]

exclude = [
    "examples/counter"
]
