[package]
name = "duid-dev"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
duid = { path = "../../", features = ["default", "with-debug"] }
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2"


[dev-dependencies]
#log = "0.4"
#wasm-bindgen-test = "0.3"
#regex = "1"